--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,16 @@ Flask-WTF==1.2.1
 fpdf==1.7.2
 greenlet==3.0.3
 idna==3.7
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 outlook-msg==1.0.0
+packaging==24.0
 pillow==10.3.0
+pluggy==1.5.0
+pytest==8.2.1
+pytest-flask==1.3.0
 reportlab==4.2.0
 SQLAlchemy==2.0.30
 typing_extensions==4.12.0
