--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   app-tutor-dev:
-    image: dannykokkinos99/app-tutor:dev
+    image: app-tutor:dev
     container_name: app-tutor-dev
     build:
       dockerfile: Dockerfile
